# TinyLM

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/phase0/: inference.md  model.md  overview.md  tokenizer.md
docs/phase01/: overview.md
docs/phase02/: overview.md
docs/phase03/: overview.md
docs/phase04/: overview.md
docs/phase1/: overview.md
docs/phase2/: overview.md
docs/setup/: overview.md  project.md  python.md  ubuntu.md
experiments/tokenizer/bpe/: 1-Understanding_BPE.ipynb  2-Naive_BPE.ipynb  3-Naive_BPE_with_punctuation.ipynb
tokenizer/bpe/: naive_bpe.py
