[project]
name = "tinylm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
